# security_dlp_permission_service

./: BUILD.gn  README.md  bundle.json  diff.diff  dlp_permission_service.gni  hisysevent.yaml  ohos.build
config/: BUILD.gn
interfaces/inner_api/dlp_fuse/: BUILD.gn
interfaces/inner_api/dlp_fuse/include/: dlp_link_file.h  dlp_link_manager.h  fuse_daemon.h
interfaces/inner_api/dlp_fuse/src/: dlp_link_file.cpp  dlp_link_manager.cpp  fuse_daemon.cpp
interfaces/inner_api/dlp_fuse/test/: BUILD.gn
interfaces/inner_api/dlp_fuse/test/unittest/src/: dlp_fuse_test.cpp  dlp_fuse_test.h  fuse_daemon_test.cpp  fuse_mock.cpp
interfaces/inner_api/dlp_parse/: BUILD.gn
interfaces/inner_api/dlp_parse/include/: dlp_crypt.h  dlp_file.h  dlp_file_kits.h  dlp_file_manager.h  dlp_format.h  dlp_fuse.h  dlp_utils.h
interfaces/inner_api/dlp_parse/src/: dlp_crypt.cpp  dlp_file.cpp  dlp_file_kits.cpp  dlp_file_manager.cpp  dlp_file_operator.cpp  dlp_format.cpp  dlp_fuse.cpp  dlp_utils.cpp
interfaces/inner_api/dlp_parse/test/: BUILD.gn  dlp_crypt_test.cpp  dlp_crypt_test.h  dlp_file_kits_test.cpp  dlp_file_kits_test.h  dlp_file_manager_test.cpp  dlp_file_manager_test.h  dlp_file_test.cpp  dlp_file_test.h  unit_test.cpp  unit_test.h
interfaces/inner_api/dlp_permission/: BUILD.gn
interfaces/inner_api/dlp_permission/include/: dlp_permission.h  dlp_permission_async_stub.h  dlp_permission_callback.h  dlp_permission_client.h  dlp_permission_death_recipient.h  dlp_permission_kit.h  dlp_permission_load_callback.h  dlp_permission_policy_def.h  dlp_permission_proxy.h  dlp_sandbox_callback_info.h  dlp_sandbox_change_callback.h  dlp_sandbox_change_callback_customize.h  dlp_sandbox_change_callback_stub.h  open_dlp_file_callback.h  open_dlp_file_callback_customize.h  open_dlp_file_callback_info.h  open_dlp_file_callback_stub.h
interfaces/inner_api/dlp_permission/src/: dlp_permission_async_stub.cpp  dlp_permission_client.cpp  dlp_permission_death_recipient.cpp  dlp_permission_kit.cpp  dlp_permission_load_callback.cpp  dlp_permission_proxy.cpp  dlp_sandbox_change_callback.cpp  dlp_sandbox_change_callback_customize.cpp  dlp_sandbox_change_callback_stub.cpp  open_dlp_file_callback.cpp  open_dlp_file_callback_customize.cpp  open_dlp_file_callback_stub.cpp
interfaces/inner_api/dlp_permission/test/: BUILD.gn
interfaces/inner_api/dlp_permission/test/unittest/src/: dlp_permission_kit_test.cpp  dlp_permission_kit_test.h
interfaces/kits/dlp_fuse/: BUILD.gn
interfaces/kits/dlp_fuse/napi/include/: napi_dlp_fuse.h
interfaces/kits/dlp_fuse/napi/src/: napi_dlp_fuse.cpp
interfaces/kits/dlp_permission/: BUILD.gn
interfaces/kits/dlp_permission/napi/include/: napi_dlp_permission.h
interfaces/kits/dlp_permission/napi/src/: napi_dlp_connection_plugin.cpp  napi_dlp_permission.cpp
services/dlp_permission/sa/: BUILD.gn  dlp_permission_service.cfg  dlp_permission_service.rc
services/dlp_permission/sa/adapt/: account_adapt.cpp  account_adapt.h  app_state_observer.cpp  app_state_observer.h  app_uninstall_observer.cpp  app_uninstall_observer.h  file_operator.cpp  file_operator.h  retention_file_manager.cpp  retention_file_manager.h  sandbox_json_manager.cpp  sandbox_json_manager.h  visit_record_file_manager.cpp  visit_record_file_manager.h  visit_record_json_manager.cpp  visit_record_json_manager.h
services/dlp_permission/sa/adapt_utils/app_observer/: app_uninstall_observer.cpp
services/dlp_permission/sa/adapt_utils/file_manager/: sandbox_json_manager.cpp  sandbox_json_manager.h
services/dlp_permission/sa/callback/: callback_manager.cpp  callback_manager.h  dlp_sandbox_change_callback_death_recipient.cpp  dlp_sandbox_change_callback_death_recipient.h  dlp_sandbox_change_callback_proxy.cpp  dlp_sandbox_change_callback_proxy.h
services/dlp_permission/sa/callback/dlp_sandbox_change_callback/: dlp_sandbox_change_callback_death_recipient.cpp  dlp_sandbox_change_callback_manager.cpp  dlp_sandbox_change_callback_manager.h
services/dlp_permission/sa/callback/open_dlp_file_callback/: open_dlp_file_callback_death_recipient.cpp  open_dlp_file_callback_death_recipient.h  open_dlp_file_callback_manager.cpp  open_dlp_file_callback_manager.h  open_dlp_file_callback_proxy.cpp  open_dlp_file_callback_proxy.h
services/dlp_permission/sa/credential/: dlp_credential.cpp  dlp_credential.h  dlp_credential_service.c  dlp_credential_service_defines.h
services/dlp_permission/sa/credential_test/: account_adapt.cpp  account_adapt.h  dlp_credential_service.c  dlp_credential_service.h  dlp_credential_service_defines.h
services/dlp_permission/sa/etc/: BUILD.gn  dlp_permission.para.dac
services/dlp_permission/sa/mock/: dlp_credential_client.h  dlp_credential_client_defines.h  dlp_credential_service.c
services/dlp_permission/sa/sa_common/: dlp_ability_adapter.cpp  dlp_ability_adapter.h  dlp_ability_conn.cpp  dlp_permission_sandbox_info.h  dlp_permission_serializer.cpp  dlp_permission_serializer.h  dlp_sandbox_info.h
services/dlp_permission/sa/sa_main/: dlp_credential.cpp  dlp_credential.h  dlp_credential_adapt.cpp  dlp_credential_adapt.h  dlp_permission_async_proxy.cpp  dlp_permission_async_proxy.h  dlp_permission_service.cpp  dlp_permission_service.h  dlp_permission_stub.cpp  dlp_permission_stub.h
services/dlp_permission/sa/sa_profile/: 3521.xml  BUILD.gn
services/dlp_permission/sa/test/: BUILD.gn
services/dlp_permission/sa/test/unittest/mock/: dlp_credential_client_defines.h  dlp_credential_service.c
services/dlp_permission/sa/test/unittest/src/: dlp_callback_test.cpp  dlp_callback_test.h  dlp_credential_test.cpp  dlp_parcel_test.cpp  dlp_parcel_test.h  dlp_permission_service_test.cpp  dlp_permission_service_test.h  dlp_policy_test.cpp  dlp_policy_test.h  hex_string_test.cpp  hex_string_test.h  (+2 more)
test/fuzztest/dlp_permission/generate_cert_fuzzer/: BUILD.gn  generate_cert_fuzzer.cpp  generate_cert_fuzzer.h
test/fuzztest/dlp_permission/generatecert_fuzzer/: BUILD.gn  generatecert_fuzzer.cpp  generatecert_fuzzer.h
test/fuzztest/dlp_permission/parsecert_fuzzer/: BUILD.gn  parsecert_fuzzer.cpp  parsecert_fuzzer.h
(+153 files in other folders)
