# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/dlp_permission_service/dlp_permission_service.gni")
import("//build/ohos.gni")

ROOT_DIR =
    "//base/security/dlp_permission_service/interfaces/inner_api/dlp_parse"

ohos_shared_library("libdlpparse") {
  sources = [
    "$ROOT_DIR/src/dlp_crypt.cpp",
    "$ROOT_DIR/src/dlp_file.cpp",
    "$ROOT_DIR/src/dlp_file_manager.cpp",
  ]

  include_dirs = [
    "$ROOT_DIR/include",
    "//base/security/dlp_permission_service/common",
    "//base/security/dlp_permission_service/frameworks/common/include",
    "//base/security/dlp_permission_service/services/dlp_permission/sa/credential_test/",
    "//base/security/dlp_permission_service/interfaces/inner_api/dlp_permission/include/",
    "//base/account/os_account/interfaces/innerkits/ohosaccount/native/include",
    "//third_party/openssl/include",
  ]

  deps = [
    "//base/account/os_account/frameworks/osaccount/native:os_account_innerkits",
    "//base/security/dlp_permission_service/interfaces/inner_api/dlp_permission:libdlp_permission_sdk",
    "//third_party/openssl:libcrypto_shared",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "utils_base:utils",
    "os_account:libaccountkits",
    "ipc:ipc_core",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  part_name = "dlp_permission_service"
  subsystem_name = "security"
}

