# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/dlp_permission_service/dlp_permission_service.gni")
import("//build/ohos.gni")

config("dlp_permission_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
}

ohos_shared_library("libdlp_permission_sdk") {
  subsystem_name = "security"
  part_name = "dlp_permission_service"
  output_name = "libdlp_permission_sdk"

  public_configs = [ ":dlp_permission_config" ]

  include_dirs = [
    "include",
    "${dlp_root_dir}/frameworks/common/include",
    "${dlp_root_dir}/frameworks/dlp_permission/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission/include",
  ]

  sources = [
    "${dlp_root_dir}/frameworks/common/src/dlp_policy.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/auth_user_info_parcel.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/dlp_policy_parcel.cpp",
    "src/dlp_permission_async_stub.cpp",
    "src/dlp_permission_client.cpp",
    "src/dlp_permission_death_recipient.cpp",
    "src/dlp_permission_kit.cpp",
    "src/dlp_permission_load_callback.cpp",
    "src/dlp_permission_proxy.cpp",
  ]

  external_deps = [
    "ability_base:want",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
}
