# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("libdlppermission_napi") {
  include_dirs = [
    "//base/security/dlp_permission_service/frameworks/common/include",
    "//base/security/dlp_permission_service/interfaces/inner_api/dlp_permission/include",
    "//base/security/dlp_permission_service/interfaces/kits/dlp_permission/napi/include",
    "//foundation/arkui/napi/interfaces/inner_api",
    "//foundation/arkui/napi/interfaces/kits",
    "//base/security/dlp_permission_service/services/dlp_permission/sa/credential_test",
    "//base/security/dlp_permission_service/common",
    "//base/security/dlp_permission_service/interfaces/kits/napi_common/include",
    "//base/security/dlp_permission_service/interfaces/inner_api/dlp_parse/include",
    "//base/security/dlp_permission_service/interfaces/inner_api/dlp_fuse/include",
  ]

  sources = [
    "//base/security/dlp_permission_service/interfaces/kits/dlp_permission/napi/src/napi_dlp_permission.cpp",
    "//base/security/dlp_permission_service/interfaces/kits/napi_common/src/napi_common.cpp",
  ]

  deps = [
    "//base/security/dlp_permission_service/interfaces/inner_api/dlp_fuse:libdlp_fuse",
    "//base/security/dlp_permission_service/interfaces/inner_api/dlp_parse:libdlpparse",
    "//base/security/dlp_permission_service/interfaces/inner_api/dlp_permission:libdlp_permission_sdk",
    "//foundation/arkui/napi:ace_napi",
    "//utils/native/base:utils",
  ]
  cflags_cc = [ "-DHILOG_ENABLE" ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  relative_install_dir = "module"
  subsystem_name = "security"
  part_name = "dlp_permission_service"
}
