# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/dlp_permission_service/dlp_permission_service.gni")
import("//build/ohos.gni")

ohos_shared_library("libdlppermission_napi") {
  include_dirs = [
    "${dlp_root_dir}/frameworks/common/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission/include",
    "${dlp_root_dir}/interfaces/kits/dlp_permission/napi/include",
    "//foundation/arkui/napi/interfaces/inner_api",
    "//foundation/arkui/napi/interfaces/kits",
    "${dlp_root_dir}/interfaces/kits/napi_common/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_fuse/include",
  ]

  sources = [
    "${dlp_root_dir}/interfaces/kits/dlp_permission/napi/src/napi_dlp_permission.cpp",
    "${dlp_root_dir}/interfaces/kits/napi_common/src/napi_common.cpp",
    "${dlp_root_dir}/interfaces/kits/napi_common/src/napi_error_msg.cpp",
  ]

  deps = [
    "${dlp_root_dir}/interfaces/inner_api/dlp_fuse:libdlp_fuse",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse:libdlpparse",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission:libdlp_permission_sdk",
    "//foundation/arkui/napi:ace_napi",
  ]
  cflags_cc = [ "-DHILOG_ENABLE" ]
  external_deps = [
    "ability_base:want",
    "hiviewdfx_hilog_native:libhilog",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  relative_install_dir = "module"
  subsystem_name = "security"
  part_name = "dlp_permission_service"
}
