# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/dlp_permission_service/dlp_permission_service.gni")
import("//build/test.gni")

ohos_unittest("dlp_fuse_test") {
  subsystem_name = "security"
  part_name = "dlp_permission_service"
  module_out_path = part_name + "/" + part_name

  include_dirs = [
    "//third_party/googletest/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_fuse/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission/include/",
    "${dlp_root_dir}/frameworks/common/include",
    "//third_party/libfuse/include/",
  ]

  sources = [ "unittest/src/dlp_fuse_test.cpp" ]

  cflags_cc = [
    "-DHILOG_ENABLE",
    "-DFUSE_USE_VERSION=35",
  ]

  configs = [ "//base/security/dlp_permission_service/config:coverage_flags" ]

  deps = [
    "${dlp_root_dir}/interfaces/inner_api/dlp_fuse:libdlp_fuse",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse:libdlpparse",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission:libdlp_permission_sdk",
    "//third_party/libfuse:libfuse",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":dlp_fuse_test" ]
}
