# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/dlp_permission_service/dlp_permission_service.gni")
import("//build/test.gni")

config("dlp_unittest_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//third_party/googletest/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/include",
    "${dlp_root_dir}/frameworks/common/include",
  ]
  cflags = [
    "-D_GNU_SOURCE",
    "-w",
  ]
}

ohos_unittest("dlp_unittest") {
  subsystem_name = "security"
  part_name = "dlp_permission_service"
  module_out_path = part_name + "/" + part_name
  public_configs = [ ":dlp_unittest_config" ]
  sources = [ "unit_test.cpp" ]

  deps = [ "${dlp_root_dir}/interfaces/inner_api/dlp_parse:libdlpparse" ]
  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "hiviewdfx_hilog_native:libhilog",
    "utils_base:utils",
  ]
  cflags_cc = [ "-DHILOG_ENABLE" ]
}

group("unittest") {
  testonly = true
  deps = [ ":dlp_unittest" ]
}
